vlib/v/checker/tests/mod_op_wrong_right_type_err_a.out
vlib/v/checker/tests/mod_op_wrong_right_type_err_a.v:2:6: error: mismatched types `int` and `f64`
    1| fn main() {
    2|     1 % 0.5
               ~~~
    3| }
